--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <--project landing page-->
     <body>
         <header>
-          <img src="https://www.pinclipart.com/picdir/big/57-576184_view-our-amazon-storefront-amazon-logo-white-png.png" 
-                 alt="Amazon Logo" class="amazon-logo">
+          <img src="logo.png" class="amazon-logo">
           <h1>
             Categories Hub
           </h1>
